--- a/src/app/pages/Employes/profilemploye/profilemploye.component.html
+++ b/src/app/pages/Employes/profilemploye/profilemploye.component.html
@@ -1,21 +1,16 @@
-<p>profilemploye works!</p>
-<app-nav-admin></app-nav-admin>
-<section>
-    <div class="cla_em">
-        <p class="nom_em"><span>PSE</span>TIME / Consultation Profil Employé</p>
-    </div>
+<section *ngFor="let profilem of profilemploye">
 
     <div class="cla_em">
         <div class="col-md-4" style="display: inline-block; width: 200px;">
-            <img [src]=image3 alt="de" class="image3">
+            <img src={{profilem.image3}} alt="de" class="image3">
         </div>
         <div class="col-md-4 coltext txtr">
-            <p>NOM ET PRENOM</p>
-            <p>Fonction en entreprise</p>
-            <p>Telephone</p>
-            <p>Identifiant de l'employé</p>
-            <p>Date d'inscription</p>
-            <button class="btn btn-primary" href=""  data-bs-toggle="modal" data-bs-target="#exampleMod">Envoyer un message</button>
+            <p>{{profilem.Nom}}</p>
+            <p>Fonction : {{profilem.Fonction}}</p>
+            <p>Tel : {{profilem.telephone}}</p>
+            <p>ID : {{profilem.Id}}</p>
+            <p>Date d'inscription : {{profilem.date}}</p>
+            <button class="btn btn-primary" href=""  data-bs-toggle="modal" data-bs-target="#exampleMod"> Envoyer un message</button>
 
             <div class="modal fade" id="exampleMod" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
@@ -38,7 +33,7 @@
 
 
                         <button class="cl1 b1 btn btn-primary d-flex dfin" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                            <mat-icon>library_books</mat-icon> Envoyer</button>
+                            <i nz-icon nzType="message" nzTheme="outline" style="padding: 5px;"></i> Envoyer</button>
                       </form>
                     </div>
                     <div class="modal-footer">
@@ -49,11 +44,11 @@
               </div>
         </div>
         <div class="col-md-4 coltext" style="position: relative; top: -110px;">
-            <p>Numero de telephone</p>
-            <p>E-mail</p>
-            <p>Date de naissance</p>
+            <!-- <p>Numero de telephone</p> -->
+            <p>E-mail: {{profilem.email}}</p>
+            <p>Date de naissance : {{profilem.datenais}}</p>
         </div>
-        <a href=""  data-bs-toggle="modal" data-bs-target="#exampleModal"><mat-icon>create</mat-icon></a>
+        <a href=""  data-bs-toggle="modal" data-bs-target="#exampleModal" class="btou"><i nz-icon nzType="edit" nzTheme="outline"></i></a>
 
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
@@ -123,7 +118,7 @@
 
 
                     <button class="cl1 b1 btn btn-primary d-flex dfin" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        <mat-icon>create</mat-icon>Modifier Employé</button>
+                        <i nz-icon nzType="edit" nzTheme="outline"></i>Modifier Employé</button>
                   </form>
                 </div>
                 <div class="modal-footer">
@@ -139,13 +134,13 @@
     <div class="cla_em2 col-md-6 v2">
         <h2>Informations personnelles</h2>
         <div class="">
-            <p>Nationalité</p>
-            <p>Religion</p>
-            <p>Situation Matrimoniale</p>
-            <p>Adresse</p>
-            <p>Nombre d'enfants</p>
-            <p>Genre</p>
-            <a href=""  data-bs-toggle="modal" data-bs-target="#exampleModa8"><mat-icon>create</mat-icon></a>
+            <p>Nationalité : {{profilem.nationalite}}</p>
+            <p>Religion : {{profilem.religion}}</p>
+            <p>Situation Matrimoniale : {{profilem.situation}}</p>
+            <p>Adresse : {{profilem.adresse}}</p>
+            <p>Nombre d'enfants : {{profilem.enfants}}</p>
+            <p>Genre : {{profilem.genre}}</p>
+            <a href=""  data-bs-toggle="modal" data-bs-target="#exampleModa8" class="botin"><i nz-icon nzType="edit" nzTheme="outline"></i></a>
 
 
             <div class="modal fade" id="exampleModa8" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -197,7 +192,7 @@
                           </div>
 
                         <button class="cl1 b1 btn btn-primary d-flex dfin" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                            <mat-icon>create</mat-icon>Modifier Info</button>
+                            <i nz-icon nzType="edit" nzTheme="outline"></i>Modifier Info</button>
                       </form>
                     </div>
                     <div class="modal-footer">
@@ -212,13 +207,13 @@
     <div class="cla_em2 col-md-6 v1">
         <h2>Personnes à contacter</h2>
         <div class="">
-            <p>Nationalité</p>
-            <p>Religion</p>
-            <p>Situation Matrimoniale</p>
-            <p>Adresse</p>
-            <p>Nombre d'enfants</p>
-            <p>Genre</p>
-            <a href=""  data-bs-toggle="modal" data-bs-target="#exampleModa9"><mat-icon>create</mat-icon></a>
+            <p>Nom : {{profilem.nompersonneurge}}</p>
+            <p>Nationalité : {{profilem.nationaliteper}}</p>
+            <p>Religion : {{profilem.relper}}</p>
+            <p>Situation Matrimoniale : {{profilem.mariage}}</p>
+            <p>Adresse : {{profilem.adreper}}</p>
+            <p>Genre : {{profilem.genreper}}</p>
+            <a href=""  data-bs-toggle="modal" data-bs-target="#exampleModa9"><i nz-icon nzType="edit" nzTheme="outline"></i></a>
 
             <div class="modal fade" id="exampleModa9" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
@@ -248,7 +243,7 @@
                           </div>
 
                         <button class="cl1 b1 btn btn-primary d-flex dfin" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                            <mat-icon>create</mat-icon>Modifier Pers</button>
+                            <i nz-icon nzType="edit" nzTheme="outline"></i>Modifier Pers</button>
                       </form>
                     </div>
                     <div class="modal-footer">
