commit to present other feature

--- a/src/app/pages/Employes/Jour_feriers/jour-feriers/jour-feriers.component.html
+++ b/src/app/pages/Employes/Jour_feriers/jour-feriers/jour-feriers.component.html
@@ -1,5 +1,5 @@
 <h1>Jour fériérs</h1>
-<mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<mat-table [dataSource]="dataSource" class="mat-elevation-z10">
   <!-- Position Column -->
   <ng-container matColumnDef="position">
     <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
@@ -23,6 +23,13 @@
     <mat-header-cell *matHeaderCellDef> Symbol </mat-header-cell>
     <mat-cell *matCellDef="let element"> {{element.symbol}} </mat-cell>
   </ng-container>
+
+   <ng-container matColumnDef="symbol">
+    <mat-header-cell *matHeaderCellDef> Symbole </mat-header-cell>
+    <mat-cell *matCellDef="let element"> {{element.symbole}} </mat-cell>
+  </ng-container>
+
+
 
   <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
   <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
