--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
             [(nzCollapsed)]="isCollapsed"
             [nzTrigger]="null">
     <div class="sidebar-logo">
-      <a href="https://ng.ant.design/" target="_blank">
+      <a routerLink="/Administrateur">
         <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo">
         <h1>Psetime</h1>
       </a>
@@ -66,7 +66,7 @@
       </li>
 
       <li nz-submenu nzOpen nzTitle="Paramètres" nzIcon="setting">
-      <li nz-submenu nzOpen nzTitle="Notifications" nzIcon="bell">
+      <li nz-submenu nzOpen nzTitle="Notifications" nzIcon="bell" routerLink="/notif">
       </li>
     </ul>
     <div class="profile_info">
