--- a/src/app/pages/Demandes/Permissions/demandespermissions/demandespermissions.component.css
+++ b/src/app/pages/Demandes/Permissions/demandespermissions/demandespermissions.component.css
@@ -1,9 +1,7 @@
 
 section{
-    width: 77%;
-    display: inline-block;
-    float: right;
-}
+    width: 95%;
+    display: inline-block;}
 
     .cl1{
         margin-left: 30px;
@@ -47,7 +45,7 @@ section{
             width: 70%;
             float: right;
         }
-        span{
+        label>span{
             color: red;
         }
 
