--- a/src/app/pages/Employes/Presences/presences/presences.component.css
+++ b/src/app/pages/Employes/Presences/presences/presences.component.css
@@ -1,7 +1,105 @@
-table {
-    width: 100%;
+section{
+    width: 95%;
+    display: inline-block;
+}
+
+    .cl1{
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+
+    .cla_em{
+        background-color: white;
+        margin: 30px 30px 0 30px;
+        padding: 0 20px;
+        border-radius: 10px;
+      }
+        .nom_em{
+            font-size: 25px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            padding: 10px;
+                   }
+   
+    .nom_em>span{
+      font-weight: bold;
+      font-family: 'Times New Roman', Times, serif;
+      color: rgb(27, 158, 245);
   }
-  
-  button {
-    margin: 16px 8px;
+    form{
+        margin: 20px 19px; }
+        form>input{
+            height: 45px;
+            width: 200px;
+        }
+        form>button{
+            font-family: 'Times New Roman', Times, serif;
+            font-size: 18px;
+            height: 45px;
+            width: 200px;
+        }
+
+    table{
+        margin: 30px 30px 0 30px;
+        
+        /* width: 85%; */
+            }
+            thead>tr>th{
+              background-color: white;
+            }
+    
+            tr{
+              height: 50px;
+          }
+          .icons{
+            font-size: 30px;
+            color: green;
+          }
+          .icone{
+            font-size: 30px;
+            color: red;
+          }
+
+    /* .modal{ */
+        .modal-title{
+            text-align: center;
+            font-size: 20px;
+            font-weight: bold;
+            margin-top: 10px;
+            font-family: 'Times New Roman', Times, serif;
+        }
+        .div-modal{
+            display: inline-block;
+            font-family: 'Times New Roman', Times, serif;
+            margin-top: 5px;
+            padding-left: 10px;
+        }
+        .ajt{
+            width: 100px;
+            margin: 10px 160px;
+            border-radius: 25px;
+            background-color: rgb(27, 158, 245);
+    }
+    .cla_em{
+        width: 97%;       
+    }
+    .txtr{
+      position: relative;
+      top: -130px;
   }
+  .pts{
+      position: relative;
+      top: -70px;
+      left: -100px;
+  } 
+    .coltext{
+      display: inline-block;
+      font-family: 'Times New Roman', Times, serif;
+      font-size: 18px;
+  }
+  .coltext>h2{
+    font-weight: bold;
+    font-family: 'Times New Roman', Times, serif;
+}
+.coltext>p{
+    padding-top: 5px;
+}
