--- a/src/app/pages/Employes/Presences/presences/presences.component.html
+++ b/src/app/pages/Employes/Presences/presences/presences.component.html
@@ -1,15 +1,170 @@
-<h1>Présences</h1>
-<button mat-raised-button (click)="addColumn()"> Add column </button>
-<button mat-raised-button (click)="removeColumn()"> Remove column </button>
+<section>
+  <div class="cla_em">
+      <p class="nom_em"><span>PSE</span>TIME / Presence</p>
+  </div>
+
+  <form class="row row-cols-lg-auto">
+      <div class="col-12">
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Nom Employé">
+        </div>
+      </div>
+    
+      <div class="div-modal col-12">
+        <input class="form-control" list="datali33" placeholder="Mois" required>
+            <datalist id="datali33">
+              <option value="Janvier">
+              <option value="Fevrier">
+              <option value="Mars">
+              <option value="Avril">
+              <option value="Mai">
+              <option value="Juin"> 
+              <option value="Juillet">
+              <option value="Aout">
+              <option value="Septembre">
+              <option value="Octobre">
+              <option value="Novembre">
+              <option value="Decembre">
+            </datalist>
+      </div>
+    
+      <div class="div-modal col-12">
+        <input class="form-control" list="datali31" placeholder="Annee" required>
+            <datalist id="datali31">
+              <option value="2010">
+              <option value="2011">
+              <option value="2012">
+              <option value="2013">
+              <option value="2014">
+              <option value="2015"> 
+              <option value="2016">
+              <option value="2017">
+              <option value="2018">
+              <option value="2019">
+              <option value="2020">
+              <option value="2021">
+            </datalist>
+      </div>
+    
+      <div class="col-12">
+        <button type="submit" class="btn btn-success">Rechercher</button>
+      </div>
+    </form>
+
+    <table class="table table-hover c1">
+      <thead class="table-info">
+          <tr>
+            <th scope="col">Employé</th>
+            <th scope="col" data-bs-toggle="modal" data-bs-target="#exampleMod">1</th>
+            <th scope="col">2</th>
+            <th scope="col">3</th>
+            <th scope="col">4</th>
+            <th scope="col">5</th>
+            <th scope="col">6</th>
+            <th scope="col">7</th>
+            <th scope="col">8</th>
+            <th scope="col">9</th>
+            <th scope="col">10</th>
+            <th scope="col">11</th>
+            <th scope="col">12</th>
+            <th scope="col">13</th>
+            <th scope="col">14</th>
+            <th scope="col">15</th>
+            <th scope="col">16</th>
+            <th scope="col">17</th>
+            <th scope="col">18</th>
+            <th scope="col">19</th>
+            <th scope="col">20</th>
+            <th scope="col">21</th>
+            <th scope="col">22</th>
+            <th scope="col">23</th>
+            <th scope="col">24</th>
+            <th scope="col">25</th>
+            <th scope="col">26</th>
+            <th scope="col">27</th>
+            <th scope="col">28</th>
+            <th scope="col">29</th>
+            <th scope="col">30</th>
+            <th scope="col">31</th>
+          </tr>
+        </thead>
+        <tbody class="table-light">
+          <tr *ngFor="let preadmin of presenceadmin">
+            <th>
+                <img src="{{ preadmin.image3 }}" alt="" style="width: 100px;">
+                <br>
+                <p style="text-align: center;">{{ preadmin.Nom }}</p>
+            </th>
+            <th scope="col" data-bs-toggle="modal" data-bs-target="#exampleModalfr"><i nz-icon nzType="check" nzTheme="outline"  class="icons"></i></th>
+            <th scope="col"><i nz-icon nzType="close" nzTheme="outline" class="icone"></i></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col"></th> 
+            <th scope="col"></th>              
+          </tr>
+        </tbody>
+  </table>
 
 
-<table mat-table [dataSource]="data" class="mat-elevation-z8">
-  <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
-    <th mat-header-cell *matHeaderCellDef> {{column}} </th>
-    <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
-  </ng-container>
+  <div class="modal fade" id="exampleModalfr" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" >
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p class="modal-title">Nom du Groupe</p>
+  
+          <div class="cla_em">
+            <div class="col-md-4 coltext txtr">
+              <h2>Configuration</h2>
+              <p>Heure D'arrivée : 09 h 00</p>
+              <p>Heure De Depart : 18 h 00</p>
+              <p>Temps à éffectué : 09 h</p>
+            </div>
+            <div class="col-md-4" style="display: inline-block; height: 300px; border-left: 2px solid rgb(146, 140, 140); position: relative; left: 50px;">
 
-  <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-  <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
-</table>
+            </div>
+            <div class="col-md-4 coltext pts"> 
+              <h2>Temps éffectué</h2>
+              <p>Heure D'arrivée : 09 h 40</p>
+              <p>Heure De Depart : 20 h 00</p>
+              <p>Temps à éffectué : 10 h 20</p>
+              <p>Heure Supplementaire : 02 h</p>
+              <p>Retard : 40 min</p>
+          </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
+</section>
