--- a/src/app/pages/Employes/conges-employes/conges-employes.component.css
+++ b/src/app/pages/Employes/conges-employes/conges-employes.component.css
@@ -3,50 +3,39 @@ section{
     display: inline-block;
 }
 
-    .cl1{
-        margin-left: 30px;
-        margin-right: 30px;
-    }
 
     .cla_em{
         background-color: white;
-        margin: 30px 30px 0 30px;
+        margin: 30px 0 0 30px;
         padding: 0 20px;
         border-radius: 10px;
-        }
+        width: 100%;
+    }
         .nom_em{
             font-size: 25px;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             padding: 10px;
         }
-            .nom_em>span{
+        .nom_em > span{
                 font-weight: bold;
                 font-family: 'Times New Roman', Times, serif;
                 color: rgb(27, 158, 245);
-            }
+        }
 
-
-    form{
-        margin: 20px 19px;
-    }
-    
-    form>input{
-        height: 45px;
-        width: 200px;
-    }
-    form>button{
-        font-family: 'Times New Roman', Times, serif;
-        font-size: 18px;
-        height: 45px;
-        width: 200px;
-    }
-    table{
-        margin: 30px 30px 0 30px;
-        width: 94%;
-    }
+     table{
+        margin: 30px 30px 0 30px;        
+    }        
     tr{
         height: 50px;
     }
-    thead>tr>th{
-        background-color: white;
+    td{
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 17px;
     }
+    th{
+        background-color: white;
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 17px;
+    }
+    
+  
