--- a/src/app/pages/Notifications/notifications/notifications.component.html
+++ b/src/app/pages/Notifications/notifications/notifications.component.html
@@ -1,1 +1,36 @@
-<h1>Notifications</h1>
+<section>
+    <div class="cla_em">
+        <p class="nom_em"><span>PSE</span>TIME / Notifications</p>
+    </div>
+    <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
+        <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
+          <th mat-header-cell *matHeaderCellDef> {{column}} </th>
+          <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+        </ng-container>
+      
+        <ng-container matColumnDef="expandedDetail">
+          <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
+            <div class="example-element-detail"
+                 [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+              <div class="example-element-diagram">
+                  <img src="{{element.personne}}" alt="de">
+                <div class="example-element-symbol"> {{element.texte}} </div>
+                <div class="example-element-name"> {{element.action}} </div>
+              </div>
+              <div class="example-element-description" style="margin-left: 10px;">
+                {{element.description}}
+              </div>
+            </div>
+          </td>
+        </ng-container>
+      
+        <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+        <tr mat-row *matRowDef="let element; columns: columnsToDisplay;"
+            class="example-element-row"
+            [class.example-expanded-row]="expandedElement === element"
+            (click)="expandedElement = expandedElement === element ? null : element">
+        </tr>
+        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+      </table>
+      
+</section>
