--- a/src/app/pages/Requetes/Revendications/revendications/revendications.component.css
+++ b/src/app/pages/Requetes/Revendications/revendications/revendications.component.css
@@ -1,12 +1,52 @@
-table {
-  width: 100%;
+section{
+    width: 95%;
+    display: inline-block;
 }
 
-.mat-form-field {
-  font-size: 14px;
-  width: 100%;
-}
+    .cl1{
+        margin-left: 30px;
+        margin-right: 30px;
+    }
 
-td, th {
-  width: 25%;
-}
+    .cla_em{
+        background-color: white;
+        margin: 30px 30px 0 30px;
+        padding: 0 20px;
+        border-radius: 10px;
+        }
+        .nom_em{
+            font-size: 25px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            padding: 10px;
+        }
+            .nom_em>span{
+                font-weight: bold;
+                font-family: 'Times New Roman', Times, serif;
+                color: rgb(27, 158, 245);
+            }
+
+
+    form{
+        margin: 20px 19px;
+    }
+    
+    form>input{
+        height: 45px;
+        width: 200px;
+    }
+    form>button{
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 18px;
+        height: 45px;
+        width: 200px;
+    }
+    table{
+        margin: 30px 30px 0 30px;
+        width: 94%;
+    }
+    tr{
+        height: 50px;
+    }
+    thead>tr>th{
+        background-color: white;
+    }
