derniere integration du vendredi 10/09/2021

--- a/src/app/pages/Employes/Groupes/groupes/groupes.component.html
+++ b/src/app/pages/Employes/Groupes/groupes/groupes.component.html
@@ -1,4 +1,4 @@
-<app-nav-admin></app-nav-admin>
+<app-welcome></app-welcome>
 <section>
     <div class="cla_em">
         <p class="nom_em"><span>PSE</span>TIME / Groupe</p>
