--- a/src/app/pages/Tableau de bord/Employe/employe/employe.component.html
+++ b/src/app/pages/Tableau de bord/Employe/employe/employe.component.html
@@ -1,7 +1,6 @@
-
-<h1>Employé</h1>
-
-<div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="20px" class ="stats-cards">
+<app-welcome></app-welcome>
+<section>
+  <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="20px" class ="stats-cards">
 
     <mat-card fxFlex="25">
        <app-pie></app-pie>
@@ -48,3 +47,6 @@
 
 
 </div>
+
+</section>
+
