--- a/src/app/pages/Employes/Conges/conges/conges.component.css
+++ b/src/app/pages/Employes/Conges/conges/conges.component.css
@@ -1,6 +1,7 @@
 section{
-    width: 95%;
+    width: 75%;
     display: inline-block;
+    float: right;
 }
 
     .cl1{
@@ -50,7 +51,7 @@ section{
             width: 150px;
     }
     table{
-        margin: 30px 30px 0 30px;        
+        margin: 30px 30px 0 30px;     
     }        
     tr{
         height: 50px;
