--- a/src/app/pages/Employes/Groupes/groupes/groupes.component.css
+++ b/src/app/pages/Employes/Groupes/groupes/groupes.component.css
@@ -1,7 +1,8 @@
 section{
-    width: 95%;
-    display: inline-block;
-  }
+    width: 75%;
+  display: inline-block;
+  float: right;
+}
  .cl1{
         margin-left: 30px;
         margin-right: 30px;
@@ -12,7 +13,7 @@ section{
         margin: 30px 30px 0 30px;
         padding: 0 20px;
         border-radius: 10px;
-        width: 100%;
+        width: 95%;
         }
         .nom_em{
           font-size: 25px;
@@ -58,7 +59,7 @@ section{
         /* border-color: white; */
         margin: 30px 0 0 30px;
         
-        width: 100%;
+        width: 95%;
     }
         
     tr{
