--- a/src/app/pages/Employes/Jour_feriers/jour-feriers/jour-feriers.component.css
+++ b/src/app/pages/Employes/Jour_feriers/jour-feriers/jour-feriers.component.css
@@ -1,6 +1,7 @@
 section{
-  width: 95%;
+  width: 75%;
   display: inline-block;
+  float: right;
 }
 
   
@@ -13,6 +14,7 @@ section{
     margin: 30px 0 0 30px;
     padding: 0 20px;
     border-radius: 10px;
+    width: 95%;
 }
     .nom_em{
         font-size: 25px;
@@ -50,4 +52,7 @@ section{
   margin: 10px 160px;
   border-radius: 25px;
   background-color: rgb(27, 158, 245);
+}
+.vg{
+  width: 95%;
 }
