--- a/src/app/pages/Employes/Tous_les_employes/tous-les-employes/tous-les-employes.component.html
+++ b/src/app/pages/Employes/Tous_les_employes/tous-les-employes/tous-les-employes.component.html
@@ -1,5 +1,7 @@
+<!-- <section style="width: 100%;"> -->
 
-<section>
+  <app-welcome></app-welcome>
+<section class="section">
     <div class="cla_em">
         <p class="nom_em"><span>PSE</span>TIME / Tous les employés</p>
     </div>
@@ -180,3 +182,6 @@
 
 
 </section>
+
+
+<!-- </section> -->
