--- a/src/app/pages/Employes/profilemploye/profilemploye.component.css
+++ b/src/app/pages/Employes/profilemploye/profilemploye.component.css
@@ -1,6 +1,7 @@
 
 section{
-    width: 77%;
+    width: 75%;
+    float: right;
     display: inline-block;
 }
 
@@ -12,7 +13,7 @@ section{
     .cla_em{
         background-color: white;
         margin: 30px 30px 0 30px;
-        width: 100%;
+        width: 93%;
         padding: 0 20px;
         border-radius: 10px;
     }
