--- a/src/app/pages/Tableau de bord/Administrateur/administrateur/administrateur.component.html
+++ b/src/app/pages/Tableau de bord/Administrateur/administrateur/administrateur.component.html
@@ -1,43 +1,47 @@
-<h1> Administrateur </h1>
-<div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="20px" class ="stats-cards">
-    <mat-card fxFlex="50">
-      <app-graph></app-graph>
-    </mat-card>
-
-     <mat-card fxFlex="50">
-       <app-graphesss></app-graphesss>
-     </mat-card>
-</div>
-<br>
-
-<br>
-
-<div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="20px" class ="stats-cards">
-    <mat-card fxFlex="25">
-        <app-pie-b></app-pie-b>
-    </mat-card>
-
-    <mat-card fxFlex="25">
-        <app-cart></app-cart>
-    </mat-card>
-
-
-    <mat-card fxFlex="50">
-       <app-pie-a></app-pie-a>
-    </mat-card>
-
-</div>
-<br>
-<br>
-
-<div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="20px" class ="stats-cards">
-    <mat-card fxFlex="75">
-        <app-Conges></app-Conges>
-    </mat-card>
-
-    <mat-card fxFlex="25">
-        <app-calend></app-calend>
-    </mat-card>
-
-</div>
+<app-welcome></app-welcome>
+<section>
+    <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="20px" class ="stats-cards">
+        <mat-card fxFlex="48" class="graph1">
+          <app-graph></app-graph>
+        </mat-card>
+    
+         <mat-card fxFlex="48" class="graph2">
+           <app-graphesss></app-graphesss>
+         </mat-card>
+    </div>
+    <br>
+    
+    <br>
+    
+    <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="20px" class ="stats-cards">
+        <mat-card fxFlex="33">
+            <app-pie-b></app-pie-b>
+        </mat-card>
+    
+        <mat-card fxFlex="25">
+            <app-cart></app-cart>
+        </mat-card>
+    
+    
+        <mat-card fxFlex="40" class="graphe5"> 
+           <app-pie-a></app-pie-a>
+        </mat-card>
+    
+    </div>
+    <!-- <br>
+    <br> -->
+<!--     
+    <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="20px" class ="stats-cards">
+        <mat-card fxFlex="75">
+            <app-Conges></app-Conges>
+        </mat-card>
+    
+        <mat-card fxFlex="25">
+            <app-calend></app-calend>
+        </mat-card>
+    
+    </div> -->
+    
+    
+</section>
 
