--- a/src/app/pages/Tableau de bord/Components/cart/cart.component.css
+++ b/src/app/pages/Tableau de bord/Components/cart/cart.component.css
@@ -1,5 +1,8 @@
 #chart {
-  max-width: 380px;
-  margin: 35px auto;
-  padding: 0;
+    height: 350px;
+    /* width: 1000px; */
+    margin-top: -10px;
+    padding: 50px 30px 0 0;
+    position: relative;
+    right: 50px;
 }
