--- a/src/app/pages/trait-revendications/trait-revendications.component.html
+++ b/src/app/pages/trait-revendications/trait-revendications.component.html
@@ -1,3 +1,4 @@
+<app-welcome></app-welcome>
 <section  *ngFor="let TraiEm of trairev">
     <div class="cla_em">
         <p class="nom_em"><span>PSE</span>TIME / Traitement Revendication</p>
