--- a/src/app/pages/Tableau de bord/Employe/employe/employe.component.html
+++ b/src/app/pages/Tableau de bord/Employe/employe/employe.component.html
@@ -2,21 +2,21 @@
 <section>
   <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="20px" class ="stats-cards">
 
-    <mat-card fxFlex="25">
+    <mat-card fxFlex="31">
        <app-pie></app-pie>
     </mat-card>
 
-    <mat-card fxFlex="25">
+    <mat-card fxFlex="31">
       <app-pie></app-pie>
     </mat-card>
 
-    <mat-card fxFlex="25">
+    <mat-card fxFlex="31">
       <app-pie></app-pie>
     </mat-card>
-
+<!-- 
     <mat-card fxFlex="25">
       <app-pie></app-pie>
-    </mat-card>
+    </mat-card> -->
 
 </div>
 
@@ -37,13 +37,13 @@
 <br>
 <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="20px" class ="stats-cards">
 
-    <mat-card fxFlex="75">
+    <!-- <mat-card fxFlex="75">
        <app-Conges></app-Conges>
-    </mat-card>
+    </mat-card> -->
 
-    <mat-card fxFlex="25">
+    <!-- <mat-card fxFlex="25">
       <app-calend></app-calend>
-    </mat-card>
+    </mat-card> -->
 
 
 </div>
